bk_ida/gccida/c1/df_ref_record
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/df_ref_record/src/df.c:1326:69: error: must use 'enum' tag to refer to type 'df_ref_type'
void  df_ref_record(  struct df *df_0, rtx reg, rtx *loc, rtx insn, df_ref_type ref_type, df_ref_flags ref_flags) 
                                                                    ^
                                                                    enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/df_ref_record/src/df.c:1326:91: error: must use 'enum' tag to refer to type 'df_ref_flags'
void  df_ref_record(  struct df *df_0, rtx reg, rtx *loc, rtx insn, df_ref_type ref_type, df_ref_flags ref_flags) 
                                                                                          ^
                                                                                          enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/df_ref_record/src/df.c:1335:6: error: use of undeclared identifier 'v13'
rtx *v13; // r13 
     ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/df_ref_record/src/df.c:1337:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode *v15; // r14 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/df_ref_record/src/df.c:1348:32: error: invalid suffix 'xmode' on integer constant
if ( v7 < mode_size[*(short *)0xmode] || v7 >= mode_size[*( unsigned __int8 *)( reg->fld[0].rtwint + 2)] ) 
                               ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/df_ref_record/src/df.c:1350:14: error: expected expression
loc = ( rtx *)reg->fld; 
             ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/df_ref_record/src/df.c:1371:26: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v12 = ( ( unsigned int)( mode_class_0[( unsigned __int8)v11] - 5) < 2) + 1; 
                         ^~~~~~~~~~~~
                         mode_class
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/df_ref_record/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/df_ref_record/src/df.c:1388:1: error: use of undeclared identifier 'v13'
v13 = loc; 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/df_ref_record/src/df.c:1396:29: error: use of undeclared identifier 'v13'
df_ref_record_1( df_0, v18, v13, insn, ref_type, ref_flags); 
                            ^
9 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/df_ref_record/src/obj/df.o] Error 1
